--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 .top {
   height: 40vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
-    url(back.png);
+    url(https://upload.wikimedia.org/wikipedia/commons/f/fc/Yosemite_Valley_from_Wawona_Tunnel_view%2C_vista_point..JPG);
   background-size: cover;
   background-position: center;
   position: relative;
